# ScriptCrew

./: CHANGELOG.md  IMPLEMENTATION.md  ROADMAP.md  SETUP.md  manage.py  pyproject.toml
.cursor/rules/: coding-preferences.mdc
deployment/: README.md
deployment/gunicorn/: gunicorn_dev.py  gunicorn_prod.py  gunicorn_test.py  varai-dev.service  varai-prod.service  varai-test.service
deployment/nginx/: dev.varai.ai-scientia.com.conf  test.varai.ai-scientia.com.conf  www.varai.ai-scientia.com.conf
deployment/scripts/: server_control.sh
docs/crew/: crew_app_diagram.mmd  crew_changes_01.md  crew_flow.md  new_crew_flow.md
src/: manage.py
src/api/: serializers.py  urls.py  views.py
src/config/: urls.py
src/core/: urls.py  views.py
src/core/templates/core/: index.html
src/core/tests/: __init__.py  test_views.py
src/crew/: CREW_CREATE.md  admin.py  models.py  urls.py  views.py
src/crew/migrations/: 0001_initial.py  0002_crewinstance_last_executed_crewinstance_status_and_more.py
src/crew/templates/crew/: agent_list.html  confirm_delete.html  crew_form.html  crew_list.html  detail.html  execute.html  execute_crew.html  execute_task.html  execution_history.html  form.html  index.html  list.html  pipeline.html  (+1 more)
src/crew/templatetags/: crew_tags.py
src/crew/tests/: __init__.py  test_api.py  test_execution.py  test_models.py  test_permissions.py  test_serializers.py  test_utils.py
src/scriptcrew/: asgi.py  settings.py  urls.py  wsgi.py
src/scriptcrew/settings/: base.py  dev.py  prod.py  test.py
src/templates/base/: base.html  navbar.html
(+2 files in other folders)
